# Copyright (c) 2026, Maptek Pty Ltd
# Licensed under the MIT License

[package]
name = "cobalt_renderer"
version = "0.1.0"
edition = "2024"
description = "Cross-platform graphics library, making 3D graphics hardware simpler to use"
repository = "https://github.com/CobaltRenderer/Cobalt-rs"
keywords = ["cobalt", "renderer", "graphics", "cross-platform", "gpu"]
categories = ["api-bindings", "graphics", "rendering", "rendering::graphics-api"]
readme = "../README.md"
license = "MIT"

[features]
default = ["raw_window_handle"]
download_sdk = ["cobalt_renderer_sys/download_sdk"]
build_sdk = ["cobalt_renderer_sys/build_sdk"]
raw_window_handle = ["dep:raw-window-handle"]

[dependencies]
cobalt_renderer_sys = { version = "2.0.0", path="../cobalt_renderer_sys" }
bitflags = "2.4.1"
parking_lot = "0.12.1"
log = "0.4"
num_enum = "0.7.4"
libloading = "0.9.0"
raw-window-handle = {version = "0.6.0", optional = true}

[dev-dependencies]
winit = { version = "0.30.13" }
image = "0.25.10"
env_logger = "0.11.10"
