# Copyright (c) 2026, Maptek Pty Ltd 
# Licensed under the MIT License

[package]
name = "cobalt_renderer_sys"
version = "2.0.0"
edition = "2024"
description = "TODO"
repository = "https://github.com/CobaltRenderer/Cobalt-rs"
keywords = ["graphics"]
license = "MIT"
links = "cobaltrenderer"

[features]
default = ["build_sdk"]
download_sdk = ["dep:ureq", "dep:sha2", "dep:zip"]
build_sdk = ["dep:git2", "dep:cmake"]

[build-dependencies]
bindgen = "0.72.1"
ureq = { version = "3.1.4", optional=true }
sha2 = { version = "0.11.0", optional=true }
zip = { version = "8.6.0", optional=true }
git2 = { version = "0.21.0", optional=true, features=["https"]}
cmake = { version = "0.1.58", optional=true }